--- a/sing/sing.html
+++ b/sing/sing.html
@@ -12,10 +12,11 @@
         <div>
             <form>
                 <label for="név">Felhasználónév</label><br>
-                <input type="name" id="nev" name="nev" value="Keresztnév"><br>
+                <input type="name" id="nev" name="nev" value="Felhasználónév"><br>
                 <label for="utónév">Jelszó</label><br>
                 <input type="password" id="jelszó" name="password" value="jelszó"><br>
                 <input type="submit" value="bejelentkezés">
+                <input type="submit"  value="elfelejtett jelszó">
             </form>
         </div>
     </article>
